Mon Jan 25 15:47:46 1999  Owen Taylor  <otaylor@redhat.com>

	* acinclude.m4 (ac_result): Don't define ENABLE_NLS
	 unless we have a working NLS. (This should keep
	 libintl.h from being included when it doesn't
	 exist).

Mon Jan 25 11:05:10 1999  George Lebl  <jirka@5z.com>

	* gtk/gtkbutton.c: set RECEIVES_DEFAULT on init, and a
	  button press on the widget doesn't grab default anymore

	* gtk/gtkcheckbutton.c,gtk/gtkoptionmenu.c,gtk/gtkradiobutton.c:
	  unset RECEIVES_DEFAULT on init

	* gtk/gtkwidget.[ch]: add a RECEIVES_DEFAULT flag to widget
	  flags

	* gtk/gtkwindow.c,gtk/gtkplug.c: on pressing <enter>, activate
	  the focused widget if it is a RECEIVES_DEFAULT widget,
	  no matter what the current default_widget is

	* gtk/gtkwindow.c: on focus change, migrate the HAS_DEFAULT
	  flag to CAN_DEFAULT widgets if they RECEIVE_DEFAULT as well
	  or migrate it back to the default_widget if the focus widget
	  doesn't "RECEIVE_DEFAULT"

Sun Jan 24 18:09:24 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdnd.c (motif_read_initiator_info): Byteswap
	the MotifInitiatorInfo structure _before_ using it.

Sun Jan 24 12:17:39 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkcolor.c (gdk_colormap_real_destroy): Fix 
	 reversed assertion. 
	 (Pointed out by Austin Donnelly <austin@greenend.org.uk>)

	* gtk/gtkruler.c (gtk_ruler_expose): Remove unecessary
	 and harmful call to gtk_paint_box(). We are going
	 to paint onto the backing store later anyways.

Sat Jan 23 11:15:39 1999  Owen Taylor  <otaylor@gtk.org>

	* gdk/gdkdnd.c (gdk_window_register_dnd): X expects
	 longs, not uint32 for XChangeProperty, when 
	 format == 32.

	* gdk/gdkdnd.c (motif_read_initiator_info): Byte-swap
	 the MotifInitiatorInfo structure if necessary.

 	* gdk/gdkdnd.c: When extracting and constructing
         Motif DND messages, don't use data.s[], data.l[]
	 since on 64bit architectures, these won't necessarily
	 be in the same place with data.b[]. 
